Default to dark mode, fix light mode purple contrast, stabilize theme switch

--- a/_sass/_themes.scss
+++ b/_sass/_themes.scss
@@ -9,8 +9,8 @@
   --global-code-bg-color: #{v.$code-bg-color-light};
   --global-text-color: #{v.$black-color};
   --global-text-color-light: #{v.$grey-color};
-  --global-theme-color: #{v.$purple-color};
-  --global-hover-color: #{v.$purple-color};
+  --global-theme-color: #{v.$ali-purple-deep};
+  --global-hover-color: #{v.$ali-purple-deep};
   --global-hover-text-color: #{v.$white-color};
   --global-footer-bg-color: #{v.$grey-color-dark};
   --global-footer-text-color: #{v.$grey-color-light};
